# kaggle-note

./: .gitignore  Pipfile  README.md  check_submissions.py  kaggle.sql  pyproject.toml
great_barrier_reef/: submissions.db  yolox_exps.ipynb
great_barrier_reef/yolov5_f2_metric/: val.py
great_barrier_reef/yolov5_f2_metric/utils/: metrics.py
great_barrier_reef/yolov5_f2_metric/utils/loggers/: __init__.py
mnist/: classifier.py  dataset.py  lenet.py  loader.py  main.py  mnist.ipynb  resnet_classifier.py  submission.sh
mnist/lightning/: classifier.py  config.py  lenet.py  loader.py  main.py
mnist/submission/: submission1.csv  submission2.csv  submission3.csv  submission4.csv  submission5.csv  submission6.csv
petfinder/: petfinder-challenge.ipynb  petfinder-final-note.ipynb  petfinder-pytorch-baseline.ipynb  submission_20211214.csv
titanic/: submission.sh  titanic.ipynb
titanic/submission/: submission1.csv  submission2.csv  submission3.csv  submission5.csv  submission6.csv  submission7.csv  submission8.csv  submission9.csv
tools/: check_submissions.py  kaggle_apilist.txt
