[tool.poetry]
name = "kaggle_note"
version = "0.1.0"
description = ""
authors = ["wellflat <wellflat@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
kaggle = "^1.5.12"
numpy = "^1.22.1"
pandas = "^1.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
